--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-tensorflow==1.15.4
+ Werkzeug==0.16.1
+flask-cors==3.0.10
+flask-restx==0.3.0
+flask>=1.1.2,<2.0
+maxfw
+flask-restplus
+pandas
+scikit-learn
+numpy
